# OGsovergienkey

./: .gitignore  ARCHITECTURE.md  NEW prime@PR1M3 ~.txt  Phase 2 Completion Plan.md  README.md  RUN_GUIDE.md  TEST_REPORT_1.md  prime@PR1M3 ~.txt  report.md  status.md  task.md  update.md
.github/workflows/: ci.yml
ai-orchestrator/: .env.example  package.json  test_prover.ts
ai-orchestrator/src/: 0g-service.ts  agent.ts  execute-task.ts  prover.ts  task-parser.ts
contracts/: addresses.json  deployed.ts  hardhat.config.ts  package.json  tsconfig.json
contracts/contracts/: AgentRegistry.sol  Groth16Verifier.sol  Verifier.sol
contracts/contracts/interfaces/: IZKVerifier.sol
contracts/contracts/mock/: MockZKVerifier.sol
contracts/scripts/: deploy.ts
contracts/test/: AgentRegistry.test.ts
mission-control/: .env.example  next.config.ts  package.json  tsconfig.tsbuildinfo
mission-control/src/app/: globals.css  layout.tsx  page.tsx
mission-control/src/components/: AgentCard.tsx  AgentDetailModal.tsx  ConnectButton.tsx  ConnectWallet.tsx  Providers.tsx  StatsCard.tsx  TaskPanel.tsx  TerminalLog.tsx  Web3Provider.tsx
scratch/: fix_page.py
zk-engine/: Cargo.toml  README.md  package.json  tsconfig.json
zk-engine/circuits/: circuit_final.zkey  compile.sh  constitution.circom  r1cs.txt  verification_key.json
zk-engine/program/: Cargo.toml
zk-engine/script/: Cargo.toml  build.rs  zk_input.json
zk-engine/script/src/: main.rs
zk-engine/scripts/: setup.js
zk-engine/src/: prover.ts  types.ts  verifier.ts
zk-engine/test/: constitution.test.js
(+16 files in other folders)
