[package]
version = "0.1.0"
name = "sovereign-agent-script"
edition = "2021"

[dependencies]
sp1-sdk = "6.1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3.3"
hex = "0.4.3"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }

[build-dependencies]
sp1-build = "6.1.0"
